# Final-App-Core-Back

./: .env.example  .gitignore  .vercelignore  README_CORE.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
app/: __init__.py  main.py
app/core/: config.py  security.py  supabase.py  tarifario.py
app/repositories/: __init__.py
app/routes/: auth_api.py  clientes.py  health.py  originacion.py  pagos.py  solicitudes.py  tarifario.py
app/schemas/: __init__.py  originacion.py  pagos.py  solicitudes.py
app/services/: __init__.py  buro_service.py  creditos_service.py  pagos_service.py  preevaluacion_service.py  solicitudes_service.py
app/static/: styles.css
app/web/: routes.py
app/web/templates/: base.html  dashboard.html  login.html  solicitud_detalle.html  solicitudes.html
supabase/migrations/: 001_originacion_movil.sql
