[project]
name = "core-mobile-api"
version = "1.0.0"
description = "API central del ecosistema móvil Financiera Confianza"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.10.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.9.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
]

[tool.vercel]
entrypoint = "app.main:app"
